created first section, made by an header(h1) three img and one hr

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>London Trip</title>
 </head>
 <body>
+    <section>
+        <header>
+            <h1>
+                Il mio viaggio a Londra
+            </h1>
+        </header>
+            <img="html-london-trip/html-london-trip/img/immagineuno.jpg">
+            <hr>
+    </section>
     
 </body>
 </html>
