created a third section with a third header(h3) and a ul of bucket list

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="shortcut icon" href="london.jpg" type="image/x-icon">
     <title>London Trip</title>
 </head>
+
 <body>
+    <!--starting first section with header and three imgs-->
     <section>
         <header>
             <h1>
@@ -17,6 +19,7 @@
             <img="html-london-trip/html-london-trip/img/immagineuno.jpg">
             <hr>
     </section>
+    <!--starting secont section with a second header and a table-->
     <section>
         <header>
             <h2>
@@ -95,6 +98,32 @@
                 </tr>
             </tbody>
         </table>
+        <hr>
+    </section>
+<!--starting third section with third header and a ul-->
+    <section>
+        <header>
+            <h3>
+                Cose da fare
+            </h3>
+        </header>
+        <ul>
+            <li>
+                Visitare la Tower of London &#935;
+            </li>
+
+            <li>
+                Visitare Greenwich &#8730;
+            </li>
+
+            <li>
+                Ascoltare un artista di strada a Covent Garden &#8730;
+            </li>
+
+            <li>
+                Mangiare il tipico Fish and Chips inglese &#935;
+            </li>
+        </ul>
         <hr>
     </section>
 
