--- a/index.html
+++ b/index.html
@@ -126,6 +126,33 @@
         </ul>
         <hr>
     </section>
+    <!--starting fourth section with an header and a mix of ol and ul-->
+    <section>
+        <header>
+            <h3>
+                Info utili:
+            </h3>
+        </header>
+        <ol>
+            <li>
+                Numeri utili di emergenza
+            </li>
+            <ul>
+                <li><strong>999</strong>-Emergenza</li>
+                <li><strong>101</strong>-Numero Polizia</li>
+                <li><strong>111</strong>-Numero assistenza medica</li>
+            </ul>
+            <li>
+                Hotel
+            </li>
+            <li>
+                Aereo
+            </li>
+        </ol>
+    </section>
+
+
+
 
     
 </body>
