Added three img on the first section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
                 Il mio viaggio a Londra
             </h1>
         </header>
-            <img="html-london-trip/html-london-trip/img/immagineuno.jpg">
+            <img src="./img/immagineuno.jpg">
+            <img src="./img/immaginedue.jpg">
+            <img src="img/immaginetre.jpg">
             <hr>
     </section>
     <!--starting secont section with a second header and a table-->
