Completed the fourth section with plus Ul

--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
 </head>
 
 <body>
-    <!--starting first section with header and three imgs-->
+
+    <!--starting first section with header and three img-->
     <section>
         <header>
             <h1>
                 Il mio viaggio a Londra
             </h1>
         </header>
+
             <img src="./img/immagineuno.jpg">
             <img src="./img/immaginedue.jpg">
             <img src="img/immaginetre.jpg">
             <hr>
     </section>
+
     <!--starting secont section with a second header and a table-->
     <section>
         <header>
@@ -28,6 +31,7 @@
                 Le mie spese
             </h2>
         </header>
+
         <table>
             <thead>
                 <tr>
@@ -102,6 +106,7 @@
         </table>
         <hr>
     </section>
+
 <!--starting third section with third header and a ul-->
     <section>
         <header>
@@ -109,6 +114,7 @@
                 Cose da fare
             </h3>
         </header>
+
         <ul>
             <li>
                 Visitare la Tower of London &#935;
@@ -128,6 +134,7 @@
         </ul>
         <hr>
     </section>
+
     <!--starting fourth section with an header and a mix of ol and ul-->
     <section>
         <header>
@@ -135,6 +142,7 @@
                 Info utili:
             </h3>
         </header>
+
         <ol>
             <li>
                 Numeri utili di emergenza
@@ -147,10 +155,20 @@
             <li>
                 Hotel
             </li>
+            <ul>
+                <li><strong>Nome Hotel</strong>Buckingham Palace</li>
+                <li><strong>Indirizzo Hotel</strong>Westminster, London SW1A 1AA, Regno Unito</li>
+            </ul>
+
             <li>
                 Aereo
             </li>
+            <ul>
+                <li><strong>Volo di Andata</strong>Y1234X, ore 9:30 da Milano Malpensa</li>
+                <li><strong> Volo di Ritorno</strong>Y1236X, ore 18:30 da London Heathrow</li>
+            </ul>
         </ol>
+        <hr>
     </section>
 
 
