created a fifth section made by an Header and two img, exercise ended

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
+    <main>
 
-    <!--starting first section with header and three img-->
+        <!--starting first section with header and three img-->
     <section>
         <header>
             <h1>
@@ -171,9 +172,17 @@
         <hr>
     </section>
 
+    <!--fifth section made by an Header and two img-->
+    <section>
+        <header>
+            <h3>
+                Le foto
+            </h3>
+        </header>
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="">
+    </section>
 
-
-
-    
+    </main>
 </body>
 </html>
